[gd_scene load_steps=49 format=3 uid="uid://fhrk2owggphk"]

[ext_resource type="Script" path="res://Scripts/base/Level_Script.gd" id="1_u1oeo"]
[ext_resource type="Script" path="res://Scripts/base/White_BG.gd" id="2_h6gvm"]
[ext_resource type="Texture2D" uid="uid://c0a6flng7t54o" path="res://Assets/base/Ellipse 1.svg" id="2_najiq"]
[ext_resource type="Texture2D" uid="uid://c2qt44jrcuom8" path="res://Assets/base/Ellipse 2.svg" id="3_qggny"]
[ext_resource type="PackedScene" uid="uid://c052ldsxyylee" path="res://Objects/Enitities/Player.tscn" id="3_t0f2e"]
[ext_resource type="Script" path="res://Scripts/base/Black_BG.gd" id="4_cxaqx"]
[ext_resource type="Script" path="res://Scripts/Objects/Death_Zone.gd" id="6_gb857"]
[ext_resource type="PackedScene" uid="uid://dsxrgee3tpdsc" path="res://Levels/Tutorial_level/Enviroment/black_ground.tscn" id="6_mpvh4"]
[ext_resource type="PackedScene" uid="uid://cg6xlt2rk6vbe" path="res://Levels/Tutorial_level/Enviroment/white_ground.tscn" id="7_ibn08"]
[ext_resource type="Texture2D" uid="uid://ch81x5h5pkws7" path="res://Assets/base/Flashlight.svg" id="9_ibfnn"]
[ext_resource type="Texture2D" uid="uid://dvntyf61tvsb3" path="res://Assets/base/Blackhole.svg" id="10_tvbti"]
[ext_resource type="Texture2D" uid="uid://cglrm205abg26" path="res://Levels/Tutorial_level/Timer.png" id="11_m4dsm"]
[ext_resource type="AnimationLibrary" uid="uid://crwyyp0x1y5qv" path="res://Assets/Animations/Highlight_Animations.res" id="12_gl3yu"]
[ext_resource type="AnimationLibrary" uid="uid://cto0ulikt5j1y" path="res://Assets/Animations/Colors_Animation.res" id="13_tap47"]
[ext_resource type="PackedScene" uid="uid://cag1mrccxn3dr" path="res://Objects/UI/UI.tscn" id="14_angvh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3h2ig"]
atlas = ExtResource("11_m4dsm")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8hpyi"]
atlas = ExtResource("11_m4dsm")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l7dy2"]
atlas = ExtResource("11_m4dsm")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqmko"]
atlas = ExtResource("11_m4dsm")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fu2xr"]
atlas = ExtResource("11_m4dsm")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wyxd8"]
atlas = ExtResource("11_m4dsm")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d7546"]
atlas = ExtResource("11_m4dsm")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jnk3h"]
atlas = ExtResource("11_m4dsm")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_17leb"]
atlas = ExtResource("11_m4dsm")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_eym88"]
atlas = ExtResource("11_m4dsm")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ptax8"]
atlas = ExtResource("11_m4dsm")
region = Rect2(64, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f75rt"]
atlas = ExtResource("11_m4dsm")
region = Rect2(80, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3fs3"]
atlas = ExtResource("11_m4dsm")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nppui"]
atlas = ExtResource("11_m4dsm")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_prwwg"]
atlas = ExtResource("11_m4dsm")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lu1my"]
atlas = ExtResource("11_m4dsm")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sg333"]
atlas = ExtResource("11_m4dsm")
region = Rect2(64, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0rayp"]
atlas = ExtResource("11_m4dsm")
region = Rect2(80, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_s6mst"]
atlas = ExtResource("11_m4dsm")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_58isw"]
atlas = ExtResource("11_m4dsm")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sg5gx"]
atlas = ExtResource("11_m4dsm")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bpkpu"]
atlas = ExtResource("11_m4dsm")
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ec44k"]
atlas = ExtResource("11_m4dsm")
region = Rect2(64, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qykfl"]
atlas = ExtResource("11_m4dsm")
region = Rect2(80, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ijp4"]
atlas = ExtResource("11_m4dsm")
region = Rect2(0, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rl6xq"]
atlas = ExtResource("11_m4dsm")
region = Rect2(16, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7r3a3"]
atlas = ExtResource("11_m4dsm")
region = Rect2(32, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_muksh"]
atlas = ExtResource("11_m4dsm")
region = Rect2(48, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h5jbt"]
atlas = ExtResource("11_m4dsm")
region = Rect2(64, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6c4l5"]
atlas = ExtResource("11_m4dsm")
region = Rect2(80, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nyukv"]
atlas = ExtResource("11_m4dsm")
region = Rect2(0, 80, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_g702j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3h2ig")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8hpyi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l7dy2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqmko")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fu2xr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wyxd8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7546")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jnk3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_17leb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eym88")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ptax8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f75rt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3fs3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nppui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_prwwg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lu1my")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sg333")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0rayp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s6mst")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_58isw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sg5gx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bpkpu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ec44k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qykfl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ijp4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rl6xq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7r3a3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_muksh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h5jbt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6c4l5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nyukv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3h2ig")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sguj5"]
size = Vector2(11047, 164)

[node name="Tutorial_Level" type="Node2D"]
process_mode = 3
script = ExtResource("1_u1oeo")

[node name="White_BG" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
show_behind_parent = true
texture_filter = 2
position = Vector2(1013, -478)
scale = Vector2(1.7, 1.7)
texture = ExtResource("2_najiq")
region_rect = Rect2(1607.5, 755.035, 312.497, 324.965)
script = ExtResource("2_h6gvm")

[node name="Black_BG" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
show_behind_parent = true
z_index = 1
texture_filter = 2
position = Vector2(1013, -478)
scale = Vector2(0.01, 0.01)
texture = ExtResource("3_qggny")
region_rect = Rect2(1607.5, 755.035, 312.497, 324.965)
script = ExtResource("4_cxaqx")

[node name="Black" parent="." instance=ExtResource("6_mpvh4")]
unique_name_in_owner = true
z_index = 3
scale = Vector2(5, 5)

[node name="White" parent="." instance=ExtResource("7_ibn08")]
unique_name_in_owner = true
z_index = 4
scale = Vector2(5, 5)

[node name="Player" parent="." instance=ExtResource("3_t0f2e")]
z_index = 4
position = Vector2(2839, -255)
scale = Vector2(5, 5)
collision_layer = 0
collision_mask = 0
platform_floor_layers = 4294967043
platform_wall_layers = 3
speed = 400
jump_height = 650

[node name="Main_Camera" type="Camera2D" parent="Player"]
unique_name_in_owner = true
position_smoothing_enabled = true
position_smoothing_speed = 10.0
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.05
drag_top_margin = 0.05
drag_right_margin = 0.1
drag_bottom_margin = 0.1

[node name="Flashlight" type="Sprite2D" parent="Player"]
z_index = 2
z_as_relative = false
scale = Vector2(0.01, 0.01)
texture = ExtResource("9_ibfnn")

[node name="Blackhole" type="Sprite2D" parent="Player"]
z_index = 2
z_as_relative = false
scale = Vector2(0.01, 0.01)
texture = ExtResource("10_tvbti")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player"]
texture_filter = 1
position = Vector2(0, -24)
sprite_frames = SubResource("SpriteFrames_g702j")
metadata/_aseprite_wizard_config_ = {
"layer": "",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"slice": "",
"source": "res://Assets/Timer.ase"
}
metadata/_aseprite_wizard_interface_config_ = {
"layer_section": false,
"output_section": false,
"slice_section": false
}
metadata/_aseprite_wizard_source_file_hash_ = "66b220fd1ac474782842c2e577c13991"

[node name="Death_Zone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 12
script = ExtResource("6_gb857")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Death_Zone"]
position = Vector2(4820.5, 1123)
shape = SubResource("RectangleShape2D_sguj5")

[node name="Highlights" type="AnimationPlayer" parent="."]
root_node = NodePath("../Player")
libraries = {
"": ExtResource("12_gl3yu")
}

[node name="Colors" type="AnimationPlayer" parent="."]
libraries = {
"": ExtResource("13_tap47")
}

[node name="Flashlight_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Ui" parent="." instance=ExtResource("14_angvh")]
unique_name_in_owner = true

[connection signal="body_entered" from="Death_Zone" to="Death_Zone" method="_on_body_entered"]
[connection signal="timeout" from="Flashlight_timer" to="." method="_on_flashlight_timer_timeout"]
